<!--

Wanderlust - the application that keeps track of your travels.
Copyright (C) 2016 Gabriella Thorén
<p>
This program is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License
as published by the Free Software Foundation; either version 2
of the License, or (at your option) any later version.
<p>
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
<p>
You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

 -->


<resources>

    <!-- Header -->
    <string name="app_name">Wanderlust</string>

    <!-- Strings for log in activity -->
    <string name="login_button_text">LOG IN</string>
    <string name="login_register_text">REGISTER</string>
    <string name="login_forgot_password_text">Forgot your username or password?</string>
    <string name="login_password_text">password</string>
    <string name="login_username_text">e-mail</string>
    <string name="icon_desc">appicon</string>

    <!-- Strings for registration -->
    <string name="reg_title">REGISTRATION</string>
    <string name="reg_first_name">first name</string>
    <string name="reg_sir_name">sir name</string>
    <string name="reg_verify_password">verify password</string>

    <!-- Strings for toolbar -->
    <string name="toolbar_title_desc">logo name</string>

    <!-- Strings for StartPage -->
    <string name="action_settings">Settings</string>

    <!-- Strings for AddActivity -->
    <string name="title_header">Title</string>
    <string name="travel_date_header">Travel date</string>

    <!-- Strings for TravelPage -->
    <string name="remove_title">Delete</string>
    
    <!-- Strings for Account --> 
    <string name="visited_countries">visited countries</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="oceania">Oceania</string>
    <string name="south_america">South America</string>

    <!-- Strings for Settings -->
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="log_out">LOG OUT</string>


</resources>
