<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for settings activity -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:id="@+id/settingsLayout">

    <!-- Includes the toolbar in the activity -->
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <RelativeLayout
        android:id="@+id/settingsRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tool_bar"
        android:padding="10dp"
        android:layout_above="@+id/log_out">

        <TextView
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_marginTop="26dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="5dp"
            android:textColor="#88666666"
            android:fontFamily="roboto"/>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/reg_first_name"
            android:ems="10"
            android:layout_below="@+id/editProfile"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/sir_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/reg_sir_name"
            android:ems="10"
            android:padding="10dp"
            android:layout_below="@+id/first_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/login_username_text"
            android:ems="10"
            android:layout_below="@+id/sir_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:padding="10dp" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="25sp"
            android:layout_marginTop="26dp"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="5dp"
            android:onClick="changeButtonHandler"
            android:layout_below="@+id/username"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:textColor="#88666666"
            android:background="@drawable/password_button"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="roboto" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:ems="10"
            android:padding="10dp"
            android:layout_below="@+id/change_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:ems="10"
            android:padding="10dp"
            android:layout_below="@+id/old_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/new_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/reg_verify_password"
            android:ems="10"
            android:padding="10dp"
            android:layout_below="@+id/new_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/deactivate_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_delete_black_24dp"
            android:drawablePadding="5dp"
            android:layout_below="@+id/change_password"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:textColor="#88666666"
            android:textSize="25sp"
            android:background="@drawable/password_button"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="roboto"
            android:text="@string/deactivate_account"
            android:onClick="deactivateAccount"
            />



    </RelativeLayout>

    <Button
        android:id="@+id/log_out"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/log_out"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:textColor="@android:color/white"
        android:fontFamily="Arial"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/delete_color"
        android:onClick="logOut"
        />


</RelativeLayout>