<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for user registrations -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:id="@+id/regLayout"
    android:background="@drawable/background_color">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/icon_desc"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:src="@drawable/icon"
        android:longClickable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <TextView
        android:id="@+id/reg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reg_title"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:textColor="@color/transparent_white44"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="Times New Roman"/>

    <EditText
        android:id="@+id/reg_username"
        android:labelFor="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="start"
        android:hint="@string/login_username_text"
        android:inputType="textEmailAddress"
        android:background="@drawable/login_textfield_shape"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:fontFamily="Times New Roman"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/reg_password"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/reg_password"
        android:labelFor="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ellipsize="start"
        android:hint="@string/login_password_text"
        android:inputType="textPassword"
        android:background="@drawable/login_textfield_shape"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:fontFamily="Times New Roman"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/reg_verify_password"
        android:labelFor="@+id/reg_verify_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ellipsize="start"
        android:hint="@string/reg_verify_password"
        android:inputType="textPassword"
        android:background="@drawable/login_textfield_shape"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:fontFamily="Times New Roman"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/reg_password"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:id="@+id/reg_first_name"
        android:labelFor="@+id/reg_first_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="start"
        android:hint="@string/reg_first_name"
        android:inputType="textEmailAddress"
        android:background="@drawable/login_textfield_shape"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:fontFamily="Times New Roman"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/reg_verify_password"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:id="@+id/reg_sir_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ellipsize="start"
        android:hint="@string/reg_sir_name"
        android:inputType="textPassword"
        android:background="@drawable/login_textfield_shape"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:fontFamily="Times New Roman"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/reg_first_name"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/reg_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register_text"
        android:background="@drawable/login_textfield_shape"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textColor="@color/red_theme_color"
        android:fontFamily="Arial"
        android:onClick="register"/>


</RelativeLayout>